--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ enjoy a refreshing beverage, and have a snack or light meal.</p>
 <div>
 12010 Garrett Bay Road<br>
 Ellison Bay, WI 54210<br>
-888-555-5555<br><br>
+<a id="mobile" href="tel:888-555-5555">888-555-5555</a><span id="desktop">888-555-5555</span><br><br>
 </div>
 </main>
 <footer>
